--- a/Markup Listify.sketchplugin/Contents/Sketch/manifest.json
+++ b/Markup Listify.sketchplugin/Contents/Sketch/manifest.json
@@ -1,10 +1,13 @@
 {
 	"name": "Markup Listify",
-	"identifier": "Markup Listify",
-	"version": "1.0",
+	"identifier": "sketch-markup-listify",
+	"appcast": "https://api.sketchpacks.com/v1/plugins/sketch-markup-listify/appcast",
+	"version": "1.1",
+	"compatibleVersion": 41,
 	"description": "Get your HTML for lists.",
 	"authorEmail": "marisa.miranda.roque@gmail.com",
 	"author": "Marisa Roque",
+	"homepage": "https://github.com/marisaroque/sketch-markup-listify",
 	"commands": [{
 		"script": "markup-listify.js",
 		"handler": "onRun",
