--- a/Markup Listify.sketchplugin/Contents/Sketch/manifest.json
+++ b/Markup Listify.sketchplugin/Contents/Sketch/manifest.json
@@ -1,13 +1,14 @@
 {
 	"name": "Markup Listify",
 	"description": "Get your HTML for lists.",
-	"authorEmail": "marisa.miranda.roque@gmail.com",
 	"author": "Marisa Roque",
+	"authorEmail": "marisa.miranda.roque@gmail.com",
 	"homepage": "https://github.com/marisaroque/sketch-markup-listify",
+	"version": 1.1,
 	"identifier": "sketch-markup-listify",
-	"appcast": "https://api.sketchpacks.com/v1/plugins/sketch-markup-listify/appcast",
-	"version": "1.1",
-	"compatibleVersion": 41,
+	"appcast": "https://raw.githubusercontent.com/marisaroque/sketch-markup-listify/master/appcast.xml",
+	"compatibleVersion": 46,
+	"bundleVersion": 1,
 	"commands": [{
 		"script": "markup-listify.js",
 		"handler": "onRun",
